force-app/main/default/objects/Truelink_Feature_Management__c/Truelink_Feature_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Truelink Feature Management</label>
</CustomObject>