force-app/main/default/objects/Truelink_Feature_Management__c/fields/Deposit_Last_Run_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Last_Run_Datetime__c</fullName>
    <label>Deposit Last Run Datetime</label>
    <type>DateTime</type>
</CustomField>