force-app/main/default/objects/Truelink_Feature_Management__c/fields/Disbursement_Last_Run_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Last_Run_Datetime__c</fullName>
    <label>Disbursement Last Run Datetime</label>
    <type>DateTime</type>
</CustomField>