force-app/main/default/objects/Truelink_Feature_Management__c/fields/Lookback_Period_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Period_In_Minutes__c</fullName>
    <label>Lookback Period In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>