force-app/main/default/objects/Truelink_Feature_Management__c/fields/Sync_Disability_Designation__c.field-meta.xml
<CustomField>
    <fullName>Sync_Disability_Designation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Disability Designation</label>
    <type>Checkbox</type>
</CustomField>