force-app/main/default/objects/Truelink_Feature_Management__c/fields/Sync_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Sync_Living_Situation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Living Situation</label>
    <type>Checkbox</type>
</CustomField>