force-app/main/default/objects/Truelink_Feature_Management__c/fields/Sync_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Marital_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Marital Status</label>
    <type>Checkbox</type>
</CustomField>